tests/neg/i17132.min.check
-- Error: tests/neg/i17132.min.scala:4:7 -------------------------------------------------------------------------------
4 |class Q[T <: P[Any]] extends P[R[T]] // error
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |Recursion limit exceeded.
  |Maybe there is an illegal cyclic reference?
  |If that's not the case, you could try to increase the fuel and stack size: https://docs.scala-lang.org/overviews/compiler-options/compiling-deeply-nested-code.html
  |For the unprocessed stack overflow trace, compile with -Xno-enrich-error-messages.
  |A recurring operation is (inner to outer):
  |
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  ...
  |
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee t
  |  reduce match type for scrutinee T
